# bazelle

./: .bazeliskrc  .bazelrc  .envrc  .gitignore  .mcp.json  .yamlfmt  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  REPO.bazel  bazel  bazel.cmd  go.mod  go.sum  install.sh  justfile  lefthook.yml
.github/workflows/: ci.yml  copybara-sync.yml  docs.yml  nightly.yml  release.yml
cmd/bazelle/: BUILD.bazel  main.go
cmd/bazelle/internal/cli/: BUILD.bazel  cli_test.go  commands_test.go  daemon.go  daemon_restart.go  daemon_start.go  daemon_status.go  daemon_stop.go  daemon_unix.go  daemon_windows.go  fix.go  gazelle.go  init.go  init_test.go  root.go  status.go  update.go  watch.go
cmd/bazelle/internal/daemon/: BUILD.bazel  client.go  client_test.go  handler.go  handler_test.go  integration_test.go  lifecycle.go  lifecycle_test.go  protocol.go  protocol_test.go  server.go  server_test.go
cmd/bazelle/internal/detect/: BUILD.bazel  detect.go  detect_test.go
cmd/bazelle/internal/incremental/: BUILD.bazel  changeset.go  entry.go  hash.go  incremental.go  incremental_test.go  index.go  scanner.go  store.go
cmd/bazelle/internal/langs/: BUILD.bazel  langs.go
cmd/bazelle/internal/runner/: BUILD.bazel  runner.go  runner_test.go
cmd/bazelle/internal/watch/: BUILD.bazel  debouncer.go  debouncer_test.go  logger.go  logger_test.go  watcher.go  watcher_test.go
cmd/gazelle/: BUILD.bazel
docs/: astro.config.mjs  package.json
docs/specs/: daemon-mode-phase1.md
docs/src/components/: CopyMarkdown.astro  PageTitle.astro
docs/src/content/docs/: configuration.mdx  contributing.mdx  faq.mdx  getting-started.mdx  index.mdx  installation.mdx  troubleshooting.mdx  why-bazelle.mdx
docs/src/content/docs/cli/: daemon.mdx  fix.mdx  index.mdx  init.mdx  update.mdx  watch.mdx
docs/src/content/docs/editors/: index.mdx  vscode.mdx
docs/src/content/docs/guides/: ci-integration.mdx  index.mdx  monorepo-setup.mdx
docs/src/content/docs/languages/: cpp.mdx  go.mdx  index.mdx  kotlin.mdx  python.mdx
docs/src/styles/: custom.css
editors/code/: .gitignore  .vscodeignore  README.md  biome.json  esbuild.ts  language-configuration.json  package.json  tsconfig.json
editors/code/src/: commands.ts  configuration.ts  extension.ts
editors/code/src/services/: bazelle.ts  binaryResolver.ts  daemon.ts  watch.ts
editors/code/src/ui/: statusBar.ts
editors/code/syntaxes/: starlark.tmLanguage.json
examples/config/: global-config.toml  project-config.toml
gazelle-groovy/: MODULE.bazel  go.mod
gazelle-groovy/groovy/: BUILD.bazel  comment_strip.go  config.go  configure.go  fix.go  fqn_scanner.go  generate.go  generate_test.go  groovy_builtin_types.txt  groovy_common_prefixes.txt  groovy_stdlib_prefixes.txt  kinds.go  lang.go  parser.go  parser_test.go  resolve.go  stdlib.go
gazelle-kotlin/: BUILD.bazel  MODULE.bazel  README.md  go.mod
gazelle-kotlin/kotlin/: BUILD.bazel  comment_strip.go  comment_strip_test.go  config.go  config_test.go  fix.go  fqn_scanner.go  generate.go  generate_test.go  kinds.go  kinds_test.go  kotlin_builtin_types.txt  kotlin_common_prefixes.txt  kotlin_stdlib_prefixes.txt  lang.go  parser.go  parser_backend.go  parser_backend_test.go  parser_test.go  resolve.go
gazelle-kotlin/kotlin/parser/: README.md
gazelle-kotlin/kotlin/parser/grammar/: KotlinImports.g4
gazelle-python/: MODULE.bazel  go.mod
gazelle-python/python/: BUILD.bazel  config.go  config_test.go  fix.go  generate.go  generate_test.go  kinds.go  lang.go  lang_test.go  parser.go  parser_test.go  pip.go  pip_known_mappings.txt  pip_test.go  resolve.go  stdlib.go  stdlib_modules.txt  stdlib_test.go  suggestions.go
infra/copybara/: README.md  copy.bara.sky
internal/log/: BUILD.bazel  handler.go  levels.go  log.go  log_test.go
pkg/: BUILD.bazel
pkg/config/: BUILD.bazel  config.go  config_test.go  loader.go
pkg/jvm/: BUILD.bazel  config.go  config_test.go  directives.go  files.go  files_test.go  fix.go  kinds.go  kinds_test.go  names.go  names_test.go  resolve.go  rules.go  types.go  types_test.go
pkg/registry/: BUILD.bazel  registry.go  registry_test.go
pkg/treesitter/: BUILD.bazel  README.md  backend_cgo.go  backend_cgo_stub.go  backend_wazero.go  registry.go  treesitter_test.go  types.go
pkg/util/: BUILD.bazel  maps.go
scripts/: install-local.sh
supply_chain/: BUILD.bazel
tools/: gopackagesdriver.cmd  gopackagesdriver.sh
tools/copybara/: BUILD.bazel
tools/nogo/: BUILD.bazel  nogo.json
tools/nogo/copylock/: BUILD.bazel  copylock.go  copylock_test.go
tools/nogo/copylock/testdata/src/a/: BUILD.bazel  a.go
tools/nogo/errcheck/: BUILD.bazel  errcheck.go  errcheck_test.go
tools/nogo/errcheck/testdata/src/a/: BUILD.bazel  a.go
tools/nogo/errorsas/: BUILD.bazel  errorsas.go  errorsas_test.go
tools/nogo/errorsas/testdata/src/a/: BUILD.bazel  a.go
tools/nogo/lostcancel/: BUILD.bazel  lostcancel.go  lostcancel_test.go
tools/nogo/lostcancel/testdata/src/a/: BUILD.bazel  a.go
tools/nogo/nilaway/: BUILD.bazel  nilaway.go
tools/nogo/printf/: BUILD.bazel  printf.go  printf_test.go
tools/nogo/printf/testdata/src/a/: BUILD.bazel  a.go
tools/nogo/structtag/: BUILD.bazel  structtag.go  structtag_test.go
tools/nogo/structtag/testdata/src/a/: BUILD.bazel  a.go
tools/nogo/unmarshal/: BUILD.bazel  unmarshal.go
tools/nogo/unusedresult/: BUILD.bazel  unusedresult.go  unusedresult_test.go
tools/nogo/unusedresult/testdata/src/a/: BUILD.bazel  a.go
tools/scripts/: BUILD.bazel  install-local.sh  verify_prebuilt_protoc.sh  workspace_status.sh
tools/supply_chain/: BUILD.bazel
