# Bazelle - Polyglot Gazelle CLI
#
# This is the root BUILD file for the bazelle monorepo.
# Run `bazel run //:gazelle` to update BUILD files.

load("@bazel_gazelle//:def.bzl", "gazelle")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//visibility:public"])

# ==============================================================================
# Gazelle Configuration
# ==============================================================================

# Go prefix for this module
# gazelle:prefix github.com/albertocavalcante/bazelle

# Go naming convention: use modern 'import' style (not legacy 'go_default_library')
# gazelle:go_naming_convention import
# gazelle:go_naming_convention_external import

# Resolve imports to bzlmod module names (Go imports don't match bzlmod paths).
# This maps Go module paths to their corresponding bazel_dep labels.
# gazelle:resolve go github.com/bazelbuild/bazel-gazelle/config @bazel_gazelle//config
# gazelle:resolve go github.com/bazelbuild/bazel-gazelle/label @bazel_gazelle//label
# gazelle:resolve go github.com/bazelbuild/bazel-gazelle/language @bazel_gazelle//language
# gazelle:resolve go github.com/bazelbuild/bazel-gazelle/language/go @bazel_gazelle//language/go
# gazelle:resolve go github.com/bazelbuild/bazel-gazelle/language/proto @bazel_gazelle//language/proto
# gazelle:resolve go github.com/bazelbuild/bazel-gazelle/repo @bazel_gazelle//repo
# gazelle:resolve go github.com/bazelbuild/bazel-gazelle/resolve @bazel_gazelle//resolve
# gazelle:resolve go github.com/bazelbuild/bazel-gazelle/rule @bazel_gazelle//rule
# gazelle:resolve go github.com/bazelbuild/bazel-gazelle/runner @bazel_gazelle//runner
# gazelle:resolve go github.com/EngFlow/gazelle_cc/language/cc @gazelle_cc//language/cc
# gazelle:resolve go github.com/bazel-contrib/rules_python/gazelle/python @rules_python_gazelle_plugin//python
# gazelle:resolve go github.com/bazelbuild/bazel-skylib/gazelle @bazel_skylib_gazelle_plugin//bzl

# Exclude directories
# gazelle:exclude .git
# gazelle:exclude bazel-*

# ==============================================================================
# Kotlin Extension Configuration
# ==============================================================================
# gazelle:kotlin_enabled true

# ==============================================================================
# Java Extension Configuration (contrib_rules_jvm)
# DISABLED: contrib_rules_jvm incompatible with Bazel 9 (ProtoInfo issue)
# TODO: Re-enable when contrib_rules_jvm is updated
# ==============================================================================
## gazelle:java_extension enabled
## gazelle:java_module_granularity package

# ==============================================================================
# Python Extension Configuration (rules_python)
# ==============================================================================
# gazelle:python_extension enabled

# ==============================================================================
# C++ Extension Configuration (gazelle_cc)
# ==============================================================================
# gazelle:cc_generate true

# ==============================================================================
# Gazelle Targets
# ==============================================================================

# Main gazelle target using the polyglot bazelle binary.
# Usage: bazel run //:gazelle
gazelle(
    name = "gazelle",
    gazelle = "//cmd/bazelle",
)

# Update repos target for Go dependency management.
# Usage: bazel run //:gazelle-update-repos
gazelle(
    name = "gazelle-update-repos",
    args = ["-from_file=go.mod"],
    command = "update-repos",
    gazelle = "//cmd/bazelle",
)

# ==============================================================================
# Install Target
# ==============================================================================

# Install locally-built bazelle to ~/.local/bin (or INSTALL_DIR)
# Usage: bazel run //:install
sh_binary(
    name = "install",
    srcs = ["//tools/scripts:install-local.sh"],
    data = ["//cmd/bazelle"],  # Will point to new CLI once built
)
