"""
Bazelle - Polyglot Gazelle CLI.

This monorepo provides a unified gazelle binary (bazelle) that supports
multiple programming languages: proto, go, java, kotlin, groovy, python, cc.

Extensions are synced via Copybara to standalone repos for BCR publishing.
"""

module(
    name = "bazelle",
    version = "0.1.0",
    compatibility_level = 1,
)

# ==============================================================================
# Core Bazel Dependencies
# ==============================================================================
bazel_dep(name = "bazel_skylib", version = "1.9.0")

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1", dev_dependency = True)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

# ==============================================================================
# Go & Gazelle (required for building extensions)
# ==============================================================================
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")

# Go SDK configuration with nogo static analysis
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.6")
go_sdk.nogo(nogo = "//tools/nogo:bazelle_nogo")
use_repo(go_sdk, "go_toolchains")

register_toolchains("@go_toolchains//:all")

# Go dependencies for nogo analyzers
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_kisielk_errcheck",
    "org_golang_x_tools",
    "org_uber_go_nilaway",
)

# ==============================================================================
# Kotlin Support (rules_kotlin for generated rules)
# ==============================================================================
bazel_dep(name = "rules_kotlin", version = "2.2.2")

# Override rules_android to 0.7.1 for Bazel 9 compatibility
# rules_kotlin@2.2.2 depends on rules_android@0.6.4 which fails on Bazel 9
# See: https://github.com/bazelbuild/rules_android/releases/tag/v0.7.0
single_version_override(
    module_name = "rules_android",
    version = "0.7.1",
)

# ==============================================================================
# Java Support (contrib_rules_jvm includes java gazelle extension)
# DISABLED: Bazel 9 compatibility requires patching - see third_party/patches/README.md
# Root cause: grpc-java 1.71.0 uses built-in ProtoInfo (removed in Bazel 9)
# Fix: grpc-java >= 1.76 loads ProtoInfo from @rules_proto (starlark)
# References:
#   - Issue: https://github.com/grpc/grpc-java/issues/12315
#   - Fix PR: https://github.com/grpc/grpc-java/pull/12312
#   - grpc-java releases: https://github.com/grpc/grpc-java/releases
# TODO: Re-enable when contrib_rules_jvm updates grpc-java or BCR has grpc-java 1.76+
# ==============================================================================
# bazel_dep(name = "rules_java", version = "9.3.0")
# bazel_dep(name = "rules_jvm_external", version = "6.9")
# bazel_dep(name = "contrib_rules_jvm", version = "0.31.1")

# ==============================================================================
# Python Support (rules_python gazelle plugin)
# ==============================================================================
bazel_dep(name = "rules_python", version = "1.8.0")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.6.3")

# ==============================================================================
# C/C++ Support (gazelle_cc from EngFlow)
# ==============================================================================
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "gazelle_cc", version = "0.4.0")
