"""
Bazelle - Polyglot Gazelle CLI.

This monorepo provides a unified gazelle binary (bazelle) that supports
multiple programming languages: proto, go, java, kotlin, groovy, scala, python, cc, rust.

Extensions are synced via Copybara to standalone repos for BCR publishing.
"""

module(
    name = "bazelle",
    version = "0.1.0",
    compatibility_level = 1,
)

# ==============================================================================
# Core Bazel Dependencies
# ==============================================================================
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.8.2")

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1", dev_dependency = True)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

# ==============================================================================
# Go & Gazelle (required for building extensions)
# ==============================================================================
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0", repo_name = "bazel_gazelle")

# Override gazelle with fork that exposes runner.Run() for library usage
# See: https://github.com/bazelbuild/bazel-gazelle/pull/1292
git_override(
    module_name = "gazelle",
    commit = "c16e1e6df9fcbe7bc2eb87e4d397ddb97300a2ff",
    remote = "https://github.com/albertocavalcante/fork-bazel-gazelle.git",
)

# Go SDK configuration with nogo static analysis
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.6")
go_sdk.nogo(nogo = "//tools/nogo:bazelle_nogo")
use_repo(go_sdk, "go_toolchains")

register_toolchains("@go_toolchains//:all")

# Go dependencies for nogo analyzers
go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_bazelbuild_bazel_gazelle",
    "com_github_burntsushi_toml",
    "com_github_cespare_xxhash_v2",
    "com_github_fsnotify_fsnotify",
    "com_github_kisielk_errcheck",
    "com_github_malivvan_tree_sitter",
    "com_github_smacker_go_tree_sitter",
    "com_github_spf13_cobra",
    "org_golang_x_term",
    "org_golang_x_tools",
    "org_uber_go_nilaway",
    "org_uber_go_zap",
)

# ==============================================================================
# Kotlin Support (rules_kotlin for generated rules)
# ==============================================================================
bazel_dep(name = "rules_kotlin", version = "2.2.2")

# Override rules_android to 0.7.1 for Bazel 9 compatibility
# rules_kotlin@2.2.2 depends on rules_android@0.6.4 which fails on Bazel 9
# See: https://github.com/bazelbuild/rules_android/releases/tag/v0.7.0
single_version_override(
    module_name = "rules_android",
    version = "0.7.1",
)

# ==============================================================================
# Java Support (contrib_rules_jvm includes java gazelle extension)
# v0.32.0 fixes Bazel 9 compatibility (grpc-java updated to 1.78.0)
# ==============================================================================
bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "6.9")
bazel_dep(name = "contrib_rules_jvm", version = "0.32.0")

# ==============================================================================
# Python Support (rules_python gazelle plugin)
# ==============================================================================
bazel_dep(name = "rules_python", version = "1.8.0")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.6.3")

# ==============================================================================
# C/C++ Support (gazelle_cc from EngFlow)
# ==============================================================================
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "gazelle_cc", version = "0.5.0")

# ==============================================================================
# Rust Support (gazelle_rust from Calsign)
# ==============================================================================
bazel_dep(name = "rules_rust", version = "0.67.0")
bazel_dep(name = "gazelle_rust", version = "0.1.0")

GAZELLE_RUST_COMMIT = "c029702902b753413f80b0549982c32912aa508a"

archive_override(
    module_name = "gazelle_rust",
    patches = ["//third_party/patches/gazelle_rust:bzlmod_compat.patch"],
    strip_prefix = "gazelle_rust-{}".format(GAZELLE_RUST_COMMIT),
    urls = ["https://github.com/Calsign/gazelle_rust/archive/{}.zip".format(GAZELLE_RUST_COMMIT)],
)

# ==============================================================================
# Scala Support (scala-gazelle from stackb)
# Requires rules_nodejs 6.7.3+ for Bazel 9 compatibility
# ==============================================================================
bazel_dep(name = "rules_scala", version = "7.1.6")
bazel_dep(name = "rules_nodejs", version = "6.7.3")
bazel_dep(name = "build_stack_scala_gazelle", version = "0.1.1")
