"""
Bazelle - Polyglot Gazelle CLI.

This monorepo provides a unified gazelle binary (bazelle) that supports
multiple programming languages: proto, go, java, kotlin, groovy, scala, python, cc, rust.

Extensions are synced via Copybara to standalone repos for BCR publishing.
"""

module(
    name = "bazelle",
    version = "0.1.0",
    compatibility_level = 1,
)

# ==============================================================================
# Core Bazel Dependencies
# ==============================================================================
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.8.2")
bazel_dep(name = "protobuf", version = "33.4")  # For prebuilt protoc toolchain

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1", dev_dependency = True)

# bazel_env.bzl - Virtual environment for Bazel-managed tools
# Not yet in BCR, so we use git_override
bazel_dep(name = "bazel_env.bzl", version = "0.6.0", dev_dependency = True)
git_override(
    module_name = "bazel_env.bzl",
    commit = "ca8da69d603f09b3691d780fe53992e36261a077",  # v0.6.0
    remote = "https://github.com/buildbuddy-io/bazel_env.bzl.git",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

# ==============================================================================
# Copybara (for syncing extensions to standalone repos)
# ==============================================================================
# Fetch Copybara standalone JAR for local Bazel-based execution
# See: https://github.com/google/copybara/releases
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "copybara_jar",
    downloaded_file_path = "copybara_deploy.jar",
    integrity = "sha256-URmJ7bFyOcvM77dY2L/N7Im0KU8R5ccN9pStiWmPKrM=",
    urls = ["https://github.com/google/copybara/releases/download/v20251215/copybara_deploy.jar"],
)

# ==============================================================================
# Supply Chain / SBOM Support (experimental)
# ==============================================================================
# Package metadata for software supply chain security and SBOM generation.
#
# Status: Active development, API may change. See:
#   - https://github.com/bazel-contrib/supply-chain
#   - https://github.com/bazelbuild/rules_license (legacy, migrating to above)
#
# Architecture:
#   package_metadata (0.0.7) - Core module, no deps, declares PURL/license
#   supply_chain_tools (0.0.1) - Gathering aspect + SBOM rules
#   supply-chain-go - SPDX generator (CycloneDX coming: PR #143)
#
# Usage: bazel build //tools/supply_chain:bazelle_sbom_spdx
bazel_dep(name = "package_metadata", version = "0.0.7")
bazel_dep(name = "supply_chain_tools", version = "0.0.1")

# Override supply-chain-go to include cmd/spdx binary (missing from BCR 0.0.7)
# The BCR release strips lib/supplychain-go but doesn't include cmd/ directory.
# Using tools-0.0.1 tag which has the complete structure.
# Patch removes local_path_override that breaks when used as a dependency.
# TODO: Remove when BCR supply-chain-go is fixed
# See: https://github.com/bazel-contrib/supply-chain/tree/main/lib/supplychain-go
bazel_dep(name = "supply-chain-go", version = "0.0.7")
archive_override(
    module_name = "supply-chain-go",
    integrity = "sha256-qrL7zEUQZl8c3+Mrm+2lIshXGkEheQ469AOFadC/0AY=",
    patch_strip = 1,
    patches = ["//third_party/patches:supply_chain_go_module.patch"],
    strip_prefix = "supply-chain-tools-0.0.1/lib/supplychain-go",
    urls = ["https://github.com/bazel-contrib/supply-chain/archive/refs/tags/tools-0.0.1.tar.gz"],
)

# ==============================================================================
# Go & Gazelle (required for building extensions)
# ==============================================================================
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0", repo_name = "bazel_gazelle")

# Override gazelle with fork that exposes runner.Run() for library usage
# See: https://github.com/bazelbuild/bazel-gazelle/pull/1292
git_override(
    module_name = "gazelle",
    commit = "c16e1e6df9fcbe7bc2eb87e4d397ddb97300a2ff",
    remote = "https://github.com/albertocavalcante/fork-bazel-gazelle.git",
)

# Go SDK configuration with nogo static analysis
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.6")
go_sdk.nogo(nogo = "//tools/nogo:bazelle_nogo")
use_repo(go_sdk, "go_toolchains")

register_toolchains("@go_toolchains//:all")

# Go dependencies for nogo analyzers
go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_bazelbuild_bazel_gazelle",
    "com_github_burntsushi_toml",
    "com_github_cespare_xxhash_v2",
    "com_github_fsnotify_fsnotify",
    "com_github_kisielk_errcheck",
    "com_github_malivvan_tree_sitter",
    "com_github_smacker_go_tree_sitter",
    "com_github_spf13_cobra",
    "org_golang_x_term",
    "org_golang_x_tools",
    "org_uber_go_nilaway",
    "org_uber_go_zap",
)

# ==============================================================================
# Kotlin Support (rules_kotlin for generated rules)
# ==============================================================================
bazel_dep(name = "rules_kotlin", version = "2.2.2")

# Override rules_android to 0.7.1 for Bazel 9 compatibility
# rules_kotlin@2.2.2 depends on rules_android@0.6.4 which fails on Bazel 9
# See: https://github.com/bazelbuild/rules_android/releases/tag/v0.7.0
single_version_override(
    module_name = "rules_android",
    version = "0.7.1",
)

# ==============================================================================
# Java Support (contrib_rules_jvm includes java gazelle extension)
# v0.32.0 fixes Bazel 9 compatibility (grpc-java updated to 1.78.0)
# ==============================================================================
bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "6.9")
bazel_dep(name = "contrib_rules_jvm", version = "0.32.0")

# Patch contrib_rules_jvm to make grpc-java use proto toolchain for protoc
# This enables using prebuilt protoc instead of compiling from source
# See: https://github.com/grpc/grpc-java/issues/11152
archive_override(
    module_name = "contrib_rules_jvm",
    integrity = "sha256-80QAtFuJV7afr3vKr3tUQs343NZuoZVLvtWrOkVD0HA=",
    patches = ["//third_party/patches:contrib_rules_jvm_proto_toolchain.patch"],
    strip_prefix = "rules_jvm-0.32.0",
    urls = ["https://github.com/bazel-contrib/rules_jvm/releases/download/v0.32.0/rules_jvm-v0.32.0.tar.gz"],
)

# Suppress warning about maven contributions from multiple modules
# See: https://github.com/bazel-contrib/rules_jvm_external/blob/master/docs/bzlmod.md#module-dependency-layering
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    known_contributing_modules = [
        "build_stack_rules_proto",
        "build_stack_scala_gazelle",
        "grpc-java",
        "protobuf",
    ],
)

# ==============================================================================
# Python Support (rules_python gazelle plugin)
# ==============================================================================
bazel_dep(name = "rules_python", version = "1.8.0")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.6.3")

# ==============================================================================
# C/C++ Support (gazelle_cc from EngFlow)
# ==============================================================================
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "gazelle_cc", version = "0.5.0")

# ==============================================================================
# Rust Support (gazelle_rust from Calsign)
# ==============================================================================
bazel_dep(name = "rules_rust", version = "0.67.0")
bazel_dep(name = "gazelle_rust", version = "0.1.0")

GAZELLE_RUST_COMMIT = "c029702902b753413f80b0549982c32912aa508a"

archive_override(
    module_name = "gazelle_rust",
    integrity = "sha256-lBLX7eNrCNrFF1701ML1AaNMIQjocmRrE8xuOqwstmM=",
    patches = ["//third_party/patches/gazelle_rust:bzlmod_compat.patch"],
    strip_prefix = "gazelle_rust-{}".format(GAZELLE_RUST_COMMIT),
    urls = ["https://github.com/Calsign/gazelle_rust/archive/{}.zip".format(GAZELLE_RUST_COMMIT)],
)

# ==============================================================================
# Scala Support (scala-gazelle from stackb)
# Requires rules_nodejs 6.7.3+ for Bazel 9 compatibility
# ==============================================================================
bazel_dep(name = "rules_scala", version = "7.1.6")
bazel_dep(name = "rules_nodejs", version = "6.7.3")
bazel_dep(name = "build_stack_scala_gazelle", version = "0.1.1")
