# Gazelle-Kotlin Extension

load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")

package(default_visibility = ["//visibility:public"])

# Custom Gazelle binary with Kotlin support
gazelle_binary(
    name = "gazelle-kotlin",
    languages = [
        "@bazel_gazelle//language/proto",
        "//gazelle-kotlin/kotlin:kotlin",
    ],
)

# Gazelle target using our custom binary
gazelle(
    name = "gazelle",
    gazelle = ":gazelle-kotlin",
)
