load("@rules_go//go:def.bzl", "go_binary", "go_library")

# Manual deps to use bzlmod module names instead of go_deps names.
# The Go imports don't match bzlmod module paths, so deps must be managed manually.
go_library(
    name = "bazelle_lib",
    srcs = ["main.go"],
    importpath = "github.com/albertocavalcante/bazelle/cmd/bazelle",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/bazelle/internal/cli",
        "//gazelle-groovy/groovy",
        "//gazelle-kotlin/kotlin",
        "@bazel_gazelle//language",
        "@bazel_gazelle//language/go",
        "@bazel_gazelle//language/proto",
        "@bazel_skylib_gazelle_plugin//bzl",
        "@build_stack_scala_gazelle//language/scala",
        "@contrib_rules_jvm//java/gazelle",
        "@gazelle_cc//language/cc",
        "@gazelle_rust//rust_language",
        "@rules_python_gazelle_plugin//python",
    ],
)

go_binary(
    name = "bazelle",
    embed = [":bazelle_lib"],
    visibility = ["//visibility:public"],
)
