load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bazelle_lib",
    srcs = ["main.go"],
    importpath = "github.com/albertocavalcante/bazelle/cmd/bazelle",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/bazelle/internal/cli",
        "//internal/log",
        "//pkg/config",
        "//pkg/registry",
    ],
)

go_binary(
    name = "bazelle",
    embed = [":bazelle_lib"],
    visibility = ["//visibility:public"],
    x_defs = {
        "github.com/albertocavalcante/bazelle/cmd/bazelle/internal/cli.Version": "{STABLE_VERSION}",
        "github.com/albertocavalcante/bazelle/cmd/bazelle/internal/cli.GitCommit": "{STABLE_GIT_COMMIT}",
    },
)
