# Gazelle Binary - Polyglot Gazelle with all language extensions
#
# This is the underlying gazelle binary that the bazelle CLI wraps.
# Use `bazelle gazelle [args]` for direct access.

load("@gazelle//:def.bzl", "gazelle_binary")

package(default_visibility = ["//visibility:public"])

# Polyglot Gazelle binary with all language extensions.
# Extension order matters: proto metadata flows to downstream extensions.
gazelle_binary(
    name = "gazelle",
    languages = [
        # Built-in extensions (from @gazelle)
        "@gazelle//language/proto",
        "@gazelle//language/go",

        # Third-party extensions (via bazel_dep)
        # Java: DISABLED - contrib_rules_jvm uses grpc-java 1.71.0 (built-in ProtoInfo)
        # Bazel 9 removed built-in ProtoInfo, requires grpc-java >= 1.76
        # See: https://github.com/grpc/grpc-java/issues/12315
        # TODO: Re-enable when upstream updates grpc-java
        # "@contrib_rules_jvm//java/gazelle",

        # Own extensions (from this repo)
        # Kotlin: generates kt_jvm_library, kt_jvm_test
        "//gazelle-kotlin/kotlin",

        # Python: generates py_library, py_test, py_binary
        # Requires CGO (tree-sitter) - host toolchain used for now
        "@rules_python_gazelle_plugin//python",

        # C/C++: generates cc_library, cc_binary, cc_test
        "@gazelle_cc//language/cc",
    ],
)
