# Gazelle-Groovy Extension

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "groovy",
    srcs = [
        "config.go",
        "configure.go",
        "fix.go",
        "generate.go",
        "kinds.go",
        "lang.go",
        "resolve.go",
    ],
    importpath = "github.com/albertocavalcante/bazelle/gazelle-groovy/groovy",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_gazelle//config",
        "@bazel_gazelle//label",
        "@bazel_gazelle//language",
        "@bazel_gazelle//repo",
        "@bazel_gazelle//resolve",
        "@bazel_gazelle//rule",
    ],
)

go_test(
    name = "groovy_test",
    srcs = ["generate_test.go"],
    embed = [":groovy"],
    deps = [
        "@bazel_gazelle//config",
        "@bazel_gazelle//language",
        "@bazel_gazelle//rule",
    ],
)
