# Gazelle-Kotlin Extension

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "kotlin",
    srcs = [
        "config.go",
        "fix.go",
        "fqn_scanner.go",
        "generate.go",
        "kinds.go",
        "lang.go",
        "parser.go",
        "resolve.go",
    ],
    importpath = "github.com/albertocavalcante/bazelle/gazelle-kotlin/kotlin",
    visibility = ["//visibility:public"],
    deps = [
        "@gazelle//config:go_default_library",
        "@gazelle//label:go_default_library",
        "@gazelle//language:go_default_library",
        "@gazelle//repo:go_default_library",
        "@gazelle//resolve:go_default_library",
        "@gazelle//rule:go_default_library",
    ],
)

go_test(
    name = "kotlin_test",
    srcs = [
        "config_test.go",
        "generate_test.go",
        "kinds_test.go",
        "parser_test.go",
    ],
    embed = [":kotlin"],
)
