# Gazelle-Kotlin Extension

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "kotlin",
    srcs = [
        "config.go",
        "fix.go",
        "fqn_scanner.go",
        "generate.go",
        "kinds.go",
        "lang.go",
        "parser.go",
        "resolve.go",
    ],
    importpath = "github.com/albertocavalcante/bazelle/gazelle-kotlin/kotlin",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_gazelle//config",
        "@bazel_gazelle//label",
        "@bazel_gazelle//language",
        "@bazel_gazelle//repo",
        "@bazel_gazelle//resolve",
        "@bazel_gazelle//rule",
    ],
)

go_test(
    name = "kotlin_test",
    srcs = [
        "config_test.go",
        "generate_test.go",
        "kinds_test.go",
        "parser_test.go",
    ],
    embed = [":kotlin"],
    deps = [
        "@bazel_gazelle//config",
        "@bazel_gazelle//language",
        "@bazel_gazelle//rule",
    ],
)
