# Gazelle-Kotlin Extension
#
# A Gazelle extension for generating Kotlin BUILD files.
# Supports multiple parsing backends: heuristic (regex) and tree-sitter (AST).

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "kotlin",
    srcs = [
        "comment_strip.go",
        "config.go",
        "fix.go",
        "fqn_scanner.go",
        "generate.go",
        "kinds.go",
        "lang.go",
        "parser.go",
        "parser_backend.go",
        "resolve.go",
    ],
    embedsrcs = [
        "kotlin_builtin_types.txt",
        "kotlin_common_prefixes.txt",
        "kotlin_stdlib_prefixes.txt",
    ],
    importpath = "github.com/albertocavalcante/bazelle/gazelle-kotlin/kotlin",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/log",
        "//pkg/jvm",
        "//pkg/treesitter",
        "@bazel_gazelle//config",
        "@bazel_gazelle//label",
        "@bazel_gazelle//language",
        "@bazel_gazelle//repo",
        "@bazel_gazelle//resolve",
        "@bazel_gazelle//rule",
    ],
)

go_test(
    name = "kotlin_test",
    srcs = [
        "comment_strip_test.go",
        "config_test.go",
        "generate_test.go",
        "kinds_test.go",
        "parser_backend_test.go",
        "parser_test.go",
    ],
    embed = [":kotlin"],
    deps = [
        "//pkg/jvm",
        "//pkg/treesitter",
        "@bazel_gazelle//config",
        "@bazel_gazelle//language",
        "@bazel_gazelle//rule",
    ],
)
