load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "python",
    srcs = [
        "config.go",
        "fix.go",
        "generate.go",
        "kinds.go",
        "lang.go",
        "parser.go",
        "pip.go",
        "resolve.go",
        "stdlib.go",
        "suggestions.go",
    ],
    embedsrcs = [
        "pip_known_mappings.txt",
        "stdlib_modules.txt",
    ],
    importpath = "github.com/albertocavalcante/bazelle/gazelle-python/python",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/log",
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
    ],
)

go_test(
    name = "python_test",
    srcs = [
        "parser_test.go",
        "pip_test.go",
        "stdlib_test.go",
    ],
    embed = [":python"],
)
