load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "python",
    srcs = [
        "config.go",
        "fix.go",
        "generate.go",
        "kinds.go",
        "lang.go",
        "parser.go",
        "pip.go",
        "resolve.go",
        "stdlib.go",
        "suggestions.go",
    ],
    embedsrcs = [
        "pip_known_mappings.txt",
        "stdlib_modules.txt",
    ],
    importpath = "github.com/albertocavalcante/bazelle/gazelle-python/python",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/log",
        "@bazel_gazelle//config",
        "@bazel_gazelle//label",
        "@bazel_gazelle//language",
        "@bazel_gazelle//repo",
        "@bazel_gazelle//resolve",
        "@bazel_gazelle//rule",
    ],
)

go_test(
    name = "python_test",
    srcs = [
        "config_test.go",
        "generate_test.go",
        "lang_test.go",
        "parser_test.go",
        "pip_test.go",
        "stdlib_test.go",
    ],
    embed = [":python"],
    deps = [
        "@bazel_gazelle//config",
        "@bazel_gazelle//language",
        "@bazel_gazelle//rule",
    ],
)
