# Structured Logging Package
#
# Provides structured logging with verbosity levels for Bazelle.
# Wraps Go's log/slog package following kubectl/klog patterns.

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "log",
    srcs = [
        "handler.go",
        "levels.go",
        "log.go",
    ],
    importpath = "github.com/albertocavalcante/bazelle/internal/log",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "log_test",
    srcs = ["log_test.go"],
    embed = [":log"],
)
