# Configuration Package
#
# Provides configuration management for Bazelle with support for
# multi-layer configuration (defaults, user, project, env, CLI flags).

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = [
        "config.go",
        "loader.go",
    ],
    importpath = "github.com/albertocavalcante/bazelle/pkg/config",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/log",
        "@com_github_burntsushi_toml//:toml",
    ],
)

go_test(
    name = "config_test",
    srcs = ["config_test.go"],
    embed = [":config"],
)
